Inclusão de moduloes'

--- a/src/app/core/scss/variables.scss
+++ b/src/app/core/scss/variables.scss
@@ -12,9 +12,6 @@ $background-color-subheader-light: #332E30;
 $text-header-light: #1a1a1a;
 $text-subheader-light: white;
 
-$background-color-subheader-light: #332e30;
-$text-subheader-light: #a3a5a7;
-
 $blue-light: #8eb5e6;
 
 $primary-palette-light: (
@@ -133,7 +130,7 @@ $text-header-dark: #e6e6e6;
 $text-subheader-dark: #666666;
 
 $background-color-subheader-dark: #a3a5a7;
-$text-subheader-dark: #332e30;
+$text-subheader-dark: #666666;
 
 $blue-dark: #8eb5e6;
 
