--- a/src/app/modules/user/login/login.component.scss
+++ b/src/app/modules/user/login/login.component.scss
@@ -1,33 +1,62 @@
 :host {
-    height: 80vh;
-    // background: linear-gradient(90deg, #14001E 0%, #46016B 100%) !important;
+  height: 80vh;
+  // background: linear-gradient(90deg, #14001E 0%, #46016B 100%) !important;
 }
 
 .signin-box {
-    margin: 0 0 10px;
-    padding: 10px;
-    max-width: 394px;
-    background-color: transparent;
-    p {
-        font-size: 14px;
-        margin: 15px;
-        text-align: center;
-    }
-    button{
-        height: 48px;
-    }
+  margin: 0 0 10px;
+  padding: 10px;
+  height: 438px;
+  background-color: transparent;
+  border: 1px solid #666666;
+  align-items: center;
+  p {
+    font-size: 14px;
+    margin: 15px;
+    text-align: center;
+  }
+  button {
+    height: 48px;
+  }
+  .entrar-com-gov-br {
+    background: #0971b3;
+    border-radius: 25px;
+    width: 228px;
+    height: 30px !important;
+    color: white;
+  }
+}
+::ng-deep.dark-mode .signin-box {
+  border: 1px solid #e6e6e6 !important;
 }
 
-.signin-box {
-    h1 {
-        margin: 22px auto 12px;
-        // background-image: url("../../../../assets/enel-logo.svg");
-        background-repeat: no-repeat;
-        background-position-x: center;
-        overflow: hidden;
-        text-indent: 110%;
-        white-space: nowrap;
-        font-size: 80px;
-    }
+.login-form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
+.login-info {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: #666666;
+}
+
+.read-qr-code {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  letter-spacing: -0.05em;
+  color: #0971b3;
+  overflow: visible;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
