--- a/src/app/template/header/header.component.html
+++ b/src/app/template/header/header.component.html
@@ -2,7 +2,9 @@
   <div class="container-fluid">
     <div class="d-flex align-items-center">
       <h1 class="flex-grow-1">
-        <img src="../assets/img/{{ logo }}.svg" />
+        <a routerLink="/">
+          <img src="../assets/img/{{ logo }}.svg" />
+        </a>
       </h1>
       <app-theme-toggle></app-theme-toggle>
     </div>
