--- a/src/app/template/subheader/subheader.component.html
+++ b/src/app/template/subheader/subheader.component.html
@@ -1,7 +1,10 @@
 <mat-toolbar class="subheader">
   <div class="container-fluid">
-    <div class="d-flex align-items-center">
-      <h1 class="flex-grow-1">ITCD</h1>
+    <div class="d-flex align-items-bottom h-100">
+      <section class="flex-grow-1">
+        ITCD<span class="sub-item">{{subItem}}</span>
+        <p class="subtitle">Declaração de Bens e Direitos</p>
+      </section>
     </div>
   </div>
 </mat-toolbar>
