--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,6 @@
 @import "./app/core/scss/variables.scss";
 @import "./app/core/components/loading/loading.component.scss";
 
-
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
@@ -17,16 +16,12 @@ $itcd-sef-web-accent-dark: mat.define-palette($accent-palette-dark);
 $itcd-sef-web-warn-dark: mat.define-palette($warn-palette-dark);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$itcd-sef-web-light-theme: mat.define-light-theme(
-    $itcd-sef-web-primary,
-    $itcd-sef-web-accent,
-    $itcd-sef-web-warn
-);
+$itcd-sef-web-light-theme: mat.define-light-theme($itcd-sef-web-primary, $itcd-sef-web-accent, $itcd-sef-web-warn);
 
 $itcd-sef-web-dark-theme: mat.define-dark-theme(
-    $itcd-sef-web-primary-dark,
-    $itcd-sef-web-accent-dark,
-    $itcd-sef-web-warn-dark
+  $itcd-sef-web-primary-dark,
+  $itcd-sef-web-accent-dark,
+  $itcd-sef-web-warn-dark
 );
 
 // Include theme styles for core and each component used in your app.
@@ -41,28 +36,43 @@ $itcd-sef-web-dark-theme: mat.define-dark-theme(
   @include mat.all-component-themes($itcd-sef-web-dark-theme);
 }
 
+$itcd-typography: mat.define-typography-config(
+  $font-family: "Inter",
+);
+
+$itcd-theme: mat.define-light-theme(
+  (
+    typography: $itcd-typography,
+  )
+);
+
+@include mat.all-component-themes($itcd-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
 html,
 body {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+  height: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  font-family: "Inter", sans-serif;
 }
 
 #app-itcd {
+  height: 100%;
+  color: #454a4d;
   background-color: $background-color-light !important;
-  &.dark-mode{
+  &.dark-mode {
+    color: $text-header-dark;
     background-color: $background-color-dark !important;
   }
 }
 
 a:link {
-    text-decoration: none;
-    color: white !important;
+  text-decoration: none;
+  color: white !important;
 }
 
 // .mat-form-field-appearance-outline .mat-form-field-outline {
@@ -85,4 +95,3 @@ a:link {
 // .mat-form-field-outline-end {
 //     border-radius: 0 10px 10px 0 !important;
 // }
-
