--- a/src/app/modules/user/login/login.component.html
+++ b/src/app/modules/user/login/login.component.html
@@ -1,6 +1,6 @@
 <app-loading [show]="loading"></app-loading>
 <div class="container">
-  <div class="row" style="height: 80vh">
+  <div class="row">
     <div class="col-md-12">
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-sm-7">
