--- a/src/app/modules/user/login/login.component.scss
+++ b/src/app/modules/user/login/login.component.scss
@@ -1,10 +1,9 @@
 :host {
-  height: 80vh;
   // background: linear-gradient(90deg, #14001E 0%, #46016B 100%) !important;
 }
 
 .signin-box {
-  margin: 0 0 10px;
+  margin: 50px 0;
   padding: 10px;
   height: 438px;
   background-color: transparent;
