--- a/src/app/template/header/header.component.scss
+++ b/src/app/template/header/header.component.scss
@@ -11,3 +11,21 @@
   height: 75px;
   @extend .px-2;
 }
+
+.welcome{
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  color: #A3A5A7;
+  margin-right: 7px;
+}
+
+.user-avatar{
+  width: 35px;
+  height: 35px;
+  font-size: 35px;
+  margin-right: 15px;
+  margin-top: 8px;
+}
